JumpScript/tests/baselines/reference/MemberFunctionDeclaration5_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration5_es6.jump(3,1): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration5_es6.jump (1 errors) ====
    class C {
       *
    }
    ~
!!! error TS1003: Identifier expected.